--- a/client/app/src/main/res/layout/activity_contacts.xml
+++ b/client/app/src/main/res/layout/activity_contacts.xml
@@ -7,13 +7,14 @@
     android:orientation="vertical"
     tools:context="ua.quasilin.chekmanszpt.activity.messages.ContactsActivity">
 
-    <Button
+    <ImageButton
         android:id="@+id/closeContacts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/close"
+        android:contentDescription="@string/close"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +41,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/closeContacts"></ListView>
+        app:layout_constraintTop_toBottomOf="@+id/closeContacts" />
 
 
 </android.support.constraint.ConstraintLayout>
