first group chats

--- a/client/app/src/main/res/layout/activity_chats.xml
+++ b/client/app/src/main/res/layout/activity_chats.xml
@@ -26,13 +26,14 @@
     <ImageButton
         android:id="@+id/newChat"
         style="@android:style/Widget.Holo.Light.ImageButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@null"
         android:contentDescription="@string/newChat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:srcCompat="@android:drawable/ic_menu_add" />
 
 </android.support.constraint.ConstraintLayout>
