--- a/client/app/src/main/res/layout/contact_list_row.xml
+++ b/client/app/src/main/res/layout/contact_list_row.xml
@@ -3,15 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingStart="8dp"
-    android:paddingEnd="4dp">
+    android:paddingEnd="4dp"
+    android:paddingStart="8dp">
 
-    <TextView
-        android:id="@+id/contactName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/inGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="@null" />
+
+        <TextView
+            android:id="@+id/contactName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/ololoTrololo"
+            android:textSize="24sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/contactDescription"
