--- a/client/app/src/main/res/layout/activity_message.xml
+++ b/client/app/src/main/res/layout/activity_message.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@null"
         android:contentDescription="@string/send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
