--- a/server/src/main/webapp/css/editor.css
+++ b/server/src/main/webapp/css/editor.css
@@ -11,9 +11,10 @@
     border-radius: 0 8pt 8pt 0;
 }
 .close-button{
-    background-color: #b43e08;
-    color: white;
+    background-color: rgb(254, 235, 227);
+    color: #2b2b2b;
 }
 .save-button{
-
+    background-color: rgb(190, 255, 227);
+    color: #2b2b2b;
 }
