--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -31,9 +31,14 @@ button:focus, input:focus{
     outline: none;
     border-color: #86cbcb;
 }
-
-.header {
+.header-wrapper{
     width: 100%;
+    background-color: #5F9EA0;
+
+}
+.header {
+    padding: 2pt 8pt;
+    display: inline-block;
 }
 .header-content{
     font-size: 18pt;
@@ -58,10 +63,26 @@ button:focus, input:focus{
     z-index: 3;
     background-color: rgba(240, 248, 255, 0.65);
 }
-.wrapper {
+.work-area{
     height: 100%;
-    overflow-y: scroll;
+    max-height: 100%;
     max-width: 1170px;
+    width: 100%;
+}
+.wrapper {
+    display: inline-block;
+    height: 100%;
+    max-height: 100%;
+    background-color: orange;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+.static-content{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 100%;
+    height: 100%;
+    background-color: #5F9EA0;
 }
 .fast-container{
     border-left: solid gray 1pt;
@@ -230,4 +251,7 @@ input.error {
 }
 .underlined{
     text-decoration: underline;
+}
+.bold{
+    font-weight: bold;
 }
