--- a/server/src/main/webapp/css/login.css
+++ b/server/src/main/webapp/css/login.css
@@ -64,6 +64,8 @@ a:hover{
     background-color: aliceblue;
     padding: 8pt;
     box-shadow: 4pt 4pt 8pt gray;
+    width: 220pt;
+    height: 90pt;
 }
 
 .custom-data-list{
