--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -73,7 +73,7 @@ button:focus, input:focus{
     display: inline-block;
     height: 100%;
     max-height: 100%;
-    background-color: orange;
+    background-color: aliceblue;
     overflow-y: scroll;
     overflow-x: hidden;
 }
