--- a/server/src/main/webapp/css/DataContainer.css
+++ b/server/src/main/webapp/css/DataContainer.css
@@ -82,7 +82,7 @@
     padding: 4pt;
 }
 .container-item-0{
-    background-color: white;
+    background-color: rgb(252, 198, 198);
 }
 .container-item-0-done{
     background-color: white;
@@ -119,7 +119,7 @@
     color: #464646;
 }
 .container-item-4{
-    background-color: white;
+    background-color: rgb(219, 230, 248);
 }
 .container-item-4-done{
     background-color: white;
