--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -10,6 +10,9 @@
     flex-wrap: wrap;
     overflow-wrap: break-word;
 }
+.filter{
+    overflow-y: scroll;
+}
 body{
     background-color: aliceblue;
 }
