--- a/WorkManger/app/src/main/res/layout/activity_deals.xml
+++ b/WorkManger/app/src/main/res/layout/activity_deals.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kvasik.workmanger.DealsActivity">
+    tools:context="com.example.kvasik.workmanger.activity.DealsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
