--- a/WorkManger/app/src/main/res/menu/navigation.xml
+++ b/WorkManger/app/src/main/res/menu/navigation.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/deals"
+        android:icon="@drawable/ic_launcher_foreground"
+        android:showAsAction="always"/>
+
 </menu>
