--- a/server/src/main/webapp/css/TransportList.css
+++ b/server/src/main/webapp/css/TransportList.css
@@ -2,11 +2,20 @@
     border-radius: 4pt;
     background: #ffffff;
     font-size: 10pt;
-    padding: 0 8pt;
-    margin: 0 2pt;
-    border: solid gray 1.2pt;
+    padding: 0 2pt;
+    margin: 0 1pt;
+    border: solid gray 1pt;
 }
 .transport-label{
     display: inline-block;
     width: 5em;
+}
+.transporter-label{
+
+}
+.data-block{
+    background-color: rgba(255, 255, 255, 0.4);
+    border: solid gray 1pt;
+    padding: 1pt 1pt 2pt;
+    border-radius: 6pt;
 }
