--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -3,6 +3,10 @@
     color: #333333;
     user-select: none;
     -moz-user-select: -moz-none;
+    font-size: 12pt;
+}
+.linux .chrome *{
+    font-size: 10pt;
 }
 .note{
     font-size: 10pt;
@@ -220,7 +224,7 @@ a:hover{
 }
 .flipY{
     transform: scaleX(-1);
-    -webkit-transform: scaleX(-1)
+    -webkit-transform: scaleX(-1);
     display: inline-block;
 }
 
