--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -1,6 +1,5 @@
 *{
-    font-family: Gill Sans, sans-serif;
-    font-size: 10pt;
+    font-family: Andale Mono, monospace;
     color: #333333;
     user-select: none;
     -moz-user-select: -moz-none;
