--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -1,9 +1,9 @@
 *{
-    font-family: Andale Mono, monospace;
+    font-family: Gill Sans, sans-serif;;
     color: #333333;
     user-select: none;
     -moz-user-select: -moz-none;
-    font-size: 12pt;
+    font-size: 10pt;
 }
 .linux .chrome *{
     font-size: 10pt;
