--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -5,6 +5,11 @@
     -moz-user-select: -moz-none;
     font-size: 10pt;
 }
+.attention{
+    color: orangered;
+    font-weight: bold;
+    border-radius: 8pt;
+}
 .linux .chrome *{
     font-size: 10pt;
 }
