--- a/server/src/main/webapp/css/filter.css
+++ b/server/src/main/webapp/css/filter.css
@@ -1,7 +1,8 @@
 .filter{
     overflow-y: scroll;
     overflow-x: hidden;
-
+    height: 100%;
+    border: solid orangered 1pt;
     width: 201px;
 }
 
