--- a/server/src/main/webapp/css/ModalView.css
+++ b/server/src/main/webapp/css/ModalView.css
@@ -1,6 +1,8 @@
 .modal-wrapper{
     width: 100%;
     height: 100%;
+    max-height: 100%;
+    overflow-y: scroll;
     position: absolute;
 }
 .modal-body{
