--- a/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/counterparty"
+        android:id="@+id/driver"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -34,7 +34,7 @@
         android:layout_marginStart="8dp"
         android:text="@string/arriveDateTime"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/counterparty" />
+        app:layout_constraintTop_toBottomOf="@+id/driver" />
 
     <Button
         android:id="@+id/dateButton"
