--- a/spedition/SpeditionClient/app/src/main/res/layout/field_list_row.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/field_list_row.xml
@@ -23,7 +23,7 @@
             android:text="25.05.2020" />
 
         <TextView
-            android:id="@+id/counterparty"
+            android:id="@+id/driver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ololovka" />
@@ -35,7 +35,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/products"
+            android:id="@+id/product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Olija" />
