--- a/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -44,28 +45,19 @@
         android:layout_height="wrap_content"
         android:text="25.05.20"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/timeButton"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/timeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:text="08:30"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/dateButton"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/dateButton" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="48dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/timeButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/timeButton"
-        app:srcCompat="@android:drawable/ic_menu_recent_history" />
+        app:layout_constraintTop_toTopOf="@+id/dateButton" />
 
     <TextView
         android:id="@+id/textView3"
