--- a/spedition/SpeditionClient/app/src/main/res/layout/field_list_row.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/field_list_row.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/field_list_row"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#D2E8C4">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/index"
@@ -18,14 +16,15 @@
 
     <TextView
         android:id="@+id/counterparty"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="25.05.2020"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/index"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/index" />
 
     <TextView
         android:id="@+id/details"
@@ -38,5 +37,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/index" />
+        app:layout_constraintTop_toBottomOf="@+id/counterparty" />
+
+    <TextView
+        android:id="@+id/timeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@+id/index"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
