--- a/spedition/untitled/src/main/webapp/css/main.css
+++ b/spedition/untitled/src/main/webapp/css/main.css
@@ -2,3 +2,13 @@
     user-select: none;
     font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
 }
+body{
+    margin: 0;
+}
+.content{
+    margin: 8pt;
+}
+button{
+    border-radius: 0;
+    outline: none;
+}
