--- a/spedition/SpeditionClient/app/src/main/res/layout/activity_login.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.Login">
+    android:layout_height="wrap_content"
+    tools:context=".dialogs.LoginDialog">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -75,6 +75,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/loginButton"
             app:layout_constraintStart_toEndOf="@+id/loginButton"
             app:layout_constraintTop_toTopOf="@+id/loginButton" />
@@ -91,4 +92,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
