--- a/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
+++ b/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
@@ -6,11 +6,16 @@
     <item
         android:id="@+id/save"
         android:icon="@android:drawable/ic_menu_save"
-        android:title="Save"
-        app:showAsAction="always" />
+        android:title="@string/save"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/cancel"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="Cancel"
-        app:showAsAction="always" />
+        android:title="@string/close"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/remove"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/delete"
+        app:showAsAction="ifRoom" />
 </menu>
